kube/okapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okapi-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: okapi
        image: okapi
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
