kube/okapi/okapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okapi-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        alt: okapi
    spec:
      containers:
      - name: okapi
        image: okapi
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /mnt/config/config.yaml
          name: okapi-config
          subPath: config.yaml
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: okapi-config
        configMap:
          name: okapi-configmap
