kube/okapi/timescaledb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        alt: timescale
    spec:
      containers:
        - name: timescaledb
          image: timescale/timescaledb:latest-pg11
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: timescaledb
              subPath: timescaledb
      volumes:
        - name: timescaledb
          persistentVolumeClaim:
            claimName: timescaledb-pvc
