kube/okapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okapi-service
spec:
  type: ClusterIP
  selector:
    alt: okapi
  ports:
  - name: http
    port: 80
    targetPort: 8080
