kube/okapi/timescaledb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescaledb-service
spec:
  selector:
    alt: timescale
  ports:
    - port: 5432
