kube/okapi/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: okapi-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: api.okapianalytics.com
      http:
        paths:
          - backend:
              serviceName: okapi-service
              servicePort: 80
